--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Compiled source #
 ###################
 *.com
@@ -31,6 +30,7 @@
 ######################
 .DS_Store
 .DS_Store?
+*.icloud
 ._*
 .Spotlight-V100
 .Trashes
